# settlement

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.gradle  gradle.properties  libs.versions.toml  settings.gradle
.cargo/: config.toml
.run/: Build.run.xml  Run.run.xml  Update Rust.run.xml
assets/client/engine/spritedata/: default.json  fog.json  unrendered.json
assets/client/settlement/spritedata/: dirt.json  grass_side.json  grass_top.json  rock.json  sand.json  snowman.json
assets/core/spritedata/: default.json  fog.json  unrendered.json
assets/server/engine/materials/: air.json
assets/server/settlement/materials/: organic.json  plant.json  rock.json  soil.json  wood.json
assets/settlement/models/tiles/: air.json
assets/settlement/spritedata/: air.json  rock.json
assets/system/spritedata/: default.json  fog.json  unrendered.json
cmake/: FindGLFW3.cmake  FindGLM.cmake
core/: build.gradle.kts
core/src/main/java/: OrthoCamController.java
cside/src/: cell.h  game.h
cside/src/data/: Enumerations.h  Identifier.cpp  Identifier.h  IntVector2.cpp  IntVector2.h  IntVector3.cpp  IntVector3.h
cside/src/entities/: Entity.cpp  Entity.h
cside/src/entities/mobile/: ItemEntity.h  MobileEntity.h
javaside/: build.gradle
lib-rust/: Cargo.toml
lwjgl3/: build.gradle
rust-interop/: Cargo.toml
rust-interop/src/: lib.rs
src/: cell.h  game.cpp  main.cpp
src/entities/: Entity.h
src/entities/mobile/: ItemEntity.cpp  MobileEntity.cpp  MobileEntity.h
src/entities/static/: StaticEntity.cpp  StaticEntity.h
(+221 files in other folders)
